# rust-book-notes

./: Cargo.toml  logbook.org
ch10-generic-types/generic-data-types/src/: main.rs
ch10-generic-types/removing-duplication/src/: main.rs
ch10-generic-types/traits-shared-behavior/: Cargo.toml
ch10-generic-types/traits-shared-behavior/src/: main.rs
ch10-generic-types/validating-references-w-lifetimes/: Cargo.toml
ch10-generic-types/validating-references-w-lifetimes/src/: main.rs
ch11-tests/adder/src/: lib.rs
ch11-tests/controlling-tests/src/: lib.rs
ch12-io-project/minigrep/src/: lib.rs  main.rs
ch13-functional-features/closures/src/: main.rs
ch13-functional-features/iterators/src/: main.rs
ch14-cargo/art/: Cargo.toml
ch14-cargo/art/src/: lib.rs
ch14-cargo/my_crate/src/: lib.rs
ch15-smart-pointers/box-heap-data/: Cargo.toml
ch15-smart-pointers/box-heap-data/src/: main.rs
ch15-smart-pointers/deref/src/: main.rs
ch15-smart-pointers/drop/src/: main.rs
ch15-smart-pointers/interior-mutability/src/: lib.rs  main.rs
ch15-smart-pointers/memory-leak/src/: main.rs
ch15-smart-pointers/reference-counted/src/: main.rs
ch16-concurrency/channels/src/: main.rs
ch16-concurrency/shared-state-concurrency/src/: main.rs
ch16-concurrency/threads-simultaneous/: Cargo.toml
ch16-concurrency/threads-simultaneous/src/: main.rs
ch17-asynchronous-programming/applying-concurrency/: Cargo.toml
ch17-asynchronous-programming/applying-concurrency/src/: main.rs
ch17-asynchronous-programming/futures-tasks-threads/: Cargo.toml
ch17-asynchronous-programming/streams-futures/: Cargo.toml
ch18-oop/oo-design-pattern/: Cargo.toml
ch19-patterns-matching/pattern-usage/: Cargo.toml
ch20-advanced-features/advanced-functions-n-closures/: Cargo.toml
ch20-advanced-features/advanced-types/: Cargo.toml
ch20-advanced-features/macros/: Cargo.toml
ch4-understanding_ownership/: notes.org  string_stuff.rs
ch4-understanding_ownership/string_stuff/: Cargo.toml
ch6-enums-pattern-matching/catch-all-patterns/: Cargo.toml
ch6-enums-pattern-matching/ip-addr-kind/: Cargo.toml
ch6-enums-pattern-matching/matching-with-option/: Cargo.toml
ch9-error-handling/recoverable-errors/: .gitignore
comments/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
functions/src/: main.rs
variables/src/: main.rs
(+44 files in other folders)
