[workspace]

members = [ "ch4-understanding_ownership/references_and_borrowing",
	"comments", "control_flow",
	"data_types",
	"functions",
	"hello_cargo",
	"hello_world", "ch4-understanding_ownership/ownership_and_functions", "ch4-understanding_ownership/return_values_and_scope", "ch4-understanding_ownership/string_stuff",
	"variables", "ch4-understanding_ownership/slice-type", "ch5-using-structs-to-structure/defining_structs", "ch5-using-structs-to-structure/rectangles", "ch6-enums-pattern-matching/ip-addr-kind", "ch6-enums-pattern-matching/option-enum", "ch6-enums-pattern-matching/match-control-flow", "ch6-enums-pattern-matching/matching-with-option",
]

resolver = "2"
